<resources>
    <string name="app_name">deteksi warna</string>
    <string name="nam">Nam</string>
    <string name="nilai_rgb">Nilai RGB</string>
    <string name="waktu">Waktu</string>
    <string name="menu_utama">Menu Utama</string>
    <string name="tingkat_stress">Tingkat Stress</string>
    <string name="title_activity_transisi">transisi</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="halaman_utama">Halaman Utama</string>
    <string name="todo">TODO</string>
    <string name="metode">Metode</string>
    <string name="halaman_awal">Halaman Awal</string>
</resources>